--- a/package.json
+++ b/package.json
@@ -4,12 +4,17 @@
   "private": true,
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.6",
+    "@types/jest": "^27.4.0",
+    "@types/node": "^17.0.8",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "aws-amplify": "^4.2.0",
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "typescript": "^4.5.4"
   },
   "resolutions": {
     "set-value": "^2.0.1",
