--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "echarts-for-react": "^3.0.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "^4.0.3",
-    "typescript": "^4.5.4"
+    "react-scripts": "^4.0.3"
   },
   "resolutions": {
     "set-value": "^2.0.1",
@@ -34,5 +33,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "^7.31.0",
+    "eslint-plugin-react": "^7.28.0",
+    "typescript": "^4.5.4"
+  }
 }
