--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .js --ignore-path .gitignore ."
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -39,6 +40,7 @@
     "@typescript-eslint/parser": "^5.9.1",
     "eslint": "^7.31.0",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
     "typescript": "^4.5.4"
   }
 }
