--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "eslint": "^7.31.0",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "2.5.1",
     "typescript": "^4.5.4"
   }
 }
