--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,13 +19,10 @@
     },
     "plugins": [
         "react",
-        "@typescript-eslint",
-        "simple-import-sort"
+        "@typescript-eslint"
     ],
     "rules": {
         "react/display-name": "off",
-        "@typescript-eslint/no-unused-vars": "off",
-        "simple-import-sort/exports": "error",
-        "simple-import-sort/imports": "error"
+        "@typescript-eslint/no-unused-vars": "off"
       }
 }
