--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "aws-amplify": "^4.2.0",
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "next": "^12.0.8",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-scripts": "^5.0.0"
   },
   "resolutions": {
