--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "mixin-deep": "^1.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "eslint --ext .js --ignore-path .gitignore ."
   },
   "eslintConfig": {
