--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,7 +5,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "pretest": "./node_modules/.bin/eslint --ignore-path .gitignore . --fix",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.6",
@@ -29,6 +31,9 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "eslint-plugin-react": "^7.28.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
+    "prettier": "2.5.1",
     "typescript": "4.5.4"
   },
   "eslintConfig": {
@@ -39,5 +44,13 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "lint-staged": {
+    "**/*": ["prettier --write --ignore-unknown", "./node_modules/.bin/eslint — fix", "git add"]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pretest"
+    }
+ }
 }
