--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
-  "name": "notes",
-  "version": "0.1.0",
+  "name": "my-app",
   "private": true,
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint",
+    "pretest": "./node_modules/.bin/eslint --ignore-path .gitignore . --fix",
+    "prepare": "husky install"
+  },
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.6",
     "@types/jest": "^27.4.0",
@@ -11,20 +18,23 @@
     "aws-amplify": "^4.2.0",
     "echarts": "^5.2.2",
     "echarts-for-react": "^3.0.2",
-    "next": "^12.0.8",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-scripts": "^5.0.0"
+    "next": "12.0.8",
+    "next-pwa": "^5.4.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2"
   },
-  "resolutions": {
-    "set-value": "^2.0.1",
-    "mixin-deep": "^1.3.2"
-  },
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint --ext .js --ignore-path .gitignore ."
+  "devDependencies": {
+    "@types/node": "17.0.8",
+    "@types/react": "17.0.38",
+    "@typescript-eslint/eslint-plugin": "^5.9.1",
+    "@typescript-eslint/parser": "^5.9.1",
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8",
+    "eslint-plugin-react": "^7.28.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
+    "prettier": "2.5.1",
+    "typescript": "4.5.4"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -35,11 +45,12 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.9.1",
-    "@typescript-eslint/parser": "^5.9.1",
-    "eslint": "^7.31.0",
-    "eslint-plugin-react": "^7.28.0",
-    "typescript": "^4.5.4"
-  }
+  "lint-staged": {
+    "**/js": ["prettier --write --ignore-unknown", "./node_modules/.bin/eslint — fix", "git add"]
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run pretest"
+    }
+ }
 }
