--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "eslint-plugin-react": "^7.28.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
+    "next-optimized-images": "^2.6.2",
     "prettier": "2.5.1",
     "typescript": "4.5.4"
   },
