--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,9 +5,7 @@
       "node": true
   },
   "extends": [
-      "eslint:recommended",
-      "plugin:react/recommended",
-      "plugin:@typescript-eslint/recommended",
+      "next",
       "next/core-web-vitals"
   ],
   "parser": "@typescript-eslint/parser",
@@ -18,12 +16,13 @@
       "ecmaVersion": "latest",
       "sourceType": "module"
   },
-  "plugins": [
-      "react",
-      "@typescript-eslint"
-  ],
+  "plugins": ["@typescript-eslint", "simple-import-sort", "unused-imports"],
   "rules": {
       "react/display-name": "off",
-      "@typescript-eslint/no-unused-vars": "off"
+      "@typescript-eslint/no-unused-vars": "off",
+      "simple-import-sort/exports": "error",
+      "simple-import-sort/imports": "error",
+      "unused-imports/no-unused-imports": "error",
+      "unused-imports/no-unused-vars": "off"
     }
 }
