--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.6",
+    "@tailwindcss/jit": "^0.1.10",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@types/react": "^17.0.38",
@@ -21,7 +22,9 @@
     "next": "12.0.8",
     "next-pwa": "^5.4.4",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.19",
+    "tailwindcss-border-gradient-radius": "^2.0.0"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
@@ -31,9 +34,12 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.1.7",
     "next-optimized-images": "^2.6.2",
+    "next-unused": "^0.0.6",
     "prettier": "2.5.1",
     "typescript": "4.5.4"
   },
@@ -47,15 +53,26 @@
     "not op_mini all"
   ],
   "lint-staged": {
-    "**/js": [
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
       "prettier --write --ignore-unknown",
-      "./node_modules/.bin/eslint — fix",
       "git add"
-    ]
+    ],
+    "*.{md,css}": "prettier --write"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run pretest"
     }
+  },
+  "next-unused": {
+    "debug": true,
+    "include": [
+      "src"
+    ],
+    "exclude": [],
+    "entrypoints": [
+      "src/pages"
+    ]
   }
 }
