--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^1.2.6",
+    "@headlessui/react": "^1.4.3",
+    "@react-hook/window-scroll": "^1.3.0",
     "@tailwindcss/jit": "^0.1.10",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
