--- a/amplify.yml
+++ b/amplify.yml
@@ -9,10 +9,10 @@ frontend:
   phases:
     preBuild:
       commands:
-        - npm install
+        - yarn install
     build:
       commands:
-        - npm run build
+        - yarn build
   artifacts:
     baseDirectory: .next
     files:
