--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "analyze": "ANALYZE=true yarn build && serve .next -n",
     "dev": "cross-env NODE_OPTIONS='--inspect' next dev",
     "inspect": "NODE_OPTIONS='--inspect' next dev",
-    "build": "yarn lingui && next build",
+    "build": "yarn lingui && NODE_OPTIONS='--max_old_space_size=8192' next build",
     "start": "next start",
     "lingui": "lingui extract --clean --overwrite && lingui compile",
     "circular": "madge --circular src --extensions ts,tsx,js,jsx",
